# Rust-Projects

Video-Player-Using-HtmlMediaElement/src/: lib.rs
Video-Player-Using-HtmlMediaElement/static/: index.html
video/: Cargo.toml  package-lock.json
